--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.12.2",
+    "firebase": "^12.3.0",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.63.0",
     "react-icons": "^5.5.0",
-    "react-router": "^7.9.1"
+    "react-router": "^7.9.1",
+    "react-toastify": "^11.0.5",
+    "sweetalert2": "^11.23.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
