--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.9.1",
     "react-select": "^5.10.2",
+    "react-share": "^5.2.2",
     "react-toastify": "^11.0.5",
     "sweetalert2": "^11.23.0"
   },
